# click2vector

./: .flake8  .pre-commit-config.yaml  README.md  click_to_geojson_functionality.py  google_sheets_parser.py  map_point_parser.py  pyproject.toml  recipes.csv  requirements-dev.txt  requirements.txt  streamlit_app.py  styling.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
export_logic/: __init__.py  export.py  export_settings_expander.py
import_logic/: __init__.py  google_sheets.py
locations/: __init__.py  points.py
map_ui/: __init__.py  basemap.py  geocoding.py  map_interactions.py  map_interface.py  view.py
map_ui/display/: __init__.py  advanced_import_expander.py  cluster.py  columns.py  display_settings_expander.py  legend.py  location_table_expander.py  markers.py  pin_colors.py  properties.py  widget_key.py
points/: __init__.py  session.py
