[tool.poetry]
name = "map-to-geojson-exporter"
version = "0.1.0"
description = "Interactive map application for creating and exporting GeoJSON points"
authors = ["Chiara Phillips <contact@chiaraphillips.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.47.0"
folium = "^0.20.0"
streamlit-folium = "^0.25.0"
pandas = "^2.0.0"
geopandas = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
